--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <form [formGroup]="authenticateForm">
+        <form [formGroup]="authenticateForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="email" class="form-control" placeholder="Email" formControlName="email">
