--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li routerLinkActive="active"><a routerLink="/auth">Authenticate</a></li>
-                <li routerLinkActive="active"><a>Home</a></li>
+                <li routerLinkActive="active"><a routerLink="/home">Home</a></li>
             </ul>
         </div>
     </div>
