--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,6 +9,12 @@
                 <li routerLinkActive="active" *ngIf="!isAuthenticated"><a routerLink="/auth">Authenticate</a></li>
                 <li routerLinkActive="active" *ngIf="isAuthenticated"><a routerLink="/home">Home</a></li>
             </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li *ngIf="isAuthenticated"><a routerLink="/cart">Cart</a></li>
+                <li *ngIf="isAuthenticated"><a>Logout</a></li>
+            </ul>
+
         </div>
     </div>
 </nav>
