--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,29 @@
-<p>home works!</p>
+<div class="container">
+    <div class="row">
+        <div *ngFor="let product of products; let i=index" class="col-sm-6 col-md-4 ">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">{{product.name}}</h3>
+                </div>
+                <div class="panel-body">
+                    <img [src]="product.imageUrl" class="img-responsive center-block">
+                    <p class="text-muted mt-2">{{product.description}}</p>
+
+                    <div>
+                        <span class="mr-10">Rs. {{product.price}}</span>
+
+                        <span>Quantity: {{product.quantity}}</span>
+                    </div>
+
+                    <div class="text-center">
+                        <button class="btn btn-primary mt-2">Add To Cart</button>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+        </div>
+    </div>
+</div>
