--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -15,7 +15,9 @@
                 <ul class="list-group">
                     <li class="list-group-item">Rating: {{cartItem.quantity}}</li>
                     <li class="list-group-item">Price: Rs. {{cartItem.price}}</li>
-                    <li class="list-group-item"><button class="btn btn-primary">Place Order</button></li>
+                    <li class="list-group-item">Quantity: {{cartItem.quantity}}</li>
+                    <li class="list-group-item"><button class="btn btn-primary" (click)="onPlaceOrder(i)">Place
+                            Order</button></li>
                 </ul>
 
             </div>
