--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li *ngIf="isAuthenticated"><a routerLink="/cart">Cart</a></li>
-                <li *ngIf="isAuthenticated"><a>Logout</a></li>
+                <li *ngIf="isAuthenticated" (click)="onLogout()"><a>Logout</a></li>
             </ul>
 
 
