--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,1 +1,27 @@
-<p>orders works!</p>
+<div class="container">
+
+    <div class="row">
+        <div *ngFor="let cartItem of order; let i = index">
+            <div class="panel panel-default">
+
+                <div class="panel-heading">
+                    <h3 class="panel-title">{{cartItem.name}}</h3>
+                </div>
+                <div class="panel-body">
+                    <img [src]="cartItem.imageUrl" class="img-responsive img-thumbnail" style="max-height: 150px;">
+                    <p>{{cartItem.description}}</p>
+                </div>
+
+                <ul class="list-group">
+                    <li class="list-group-item">Rating: {{cartItem.quantity}}</li>
+                    <li class="list-group-item">Price: Rs. {{cartItem.price}}</li>
+                    <li class="list-group-item">Quantity: {{cartItem.quantity}}</li>
+                    <li class="list-group-item"><button class="btn btn-primary" (click)="onPlaceOrder(i)">Place
+                            Order</button></li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
+
+</div>
