--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li *ngIf="isAuthenticated"><a routerLink="/cart">Cart</a></li>
+                <li *ngIf="isAuthenticated && !isAdmin"><a routerLink="/cart">Cart</a></li>
                 <li *ngIf="isAuthenticated" (click)="onLogout()"><a>Logout</a></li>
             </ul>
 
