--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,25 +1,33 @@
-<div class="row">
-    <div class="col-md-4 col-md-offset-4">
-        <form [formGroup]="authenticateForm" (ngSubmit)="onSubmit()">
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" placeholder="Email" formControlName="email">
+<div class="container auth-container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="auth-box">
+                <h2 class="text-center">{{ inSignUpMode ? 'Sign Up' : 'Sign In' }}</h2>
 
+                <form [formGroup]="authenticateForm" (ngSubmit)="onSubmit()">
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" placeholder="Email" formControlName="email">
+
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" placeholder="Password" formControlName="password">
+
+                    </div>
+
+                    <button type="submit" class="btn btn-primary" [disabled]="authenticateForm.invalid">{{inSignUpMode ?
+                        'SignUp'
+                        :'Sign In'}}</button> |
+
+                    <button type="button" class="btn btn-primary" (click)="onSwitchMode()">{{!inSignUpMode ? 'Switch to
+                        Sign
+                        Up'
+                        :
+                        'Switch to Sign In' }}</button>
+                </form>
             </div>
-
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" placeholder="Password" formControlName="password">
-
-            </div>
-
-            <button type="submit" class="btn btn-primary" [disabled]="authenticateForm.invalid">{{inSignUpMode ?
-                'SignUp'
-                :'Sign In'}}</button> |
-
-            <button type="button" class="btn btn-primary" (click)="onSwitchMode()">{{!inSignUpMode ? 'Switch to Sign Up'
-                :
-                'Switch to Sign In' }}</button>
-        </form>
+        </div>
     </div>
 </div>
