--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-brand">KartoMart</a>
@@ -15,8 +15,10 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li *ngIf="isAuthenticated && !isAdmin"><a routerLink="/cart">Cart</a></li>
+                <li routerLinkActive="active" *ngIf="isAuthenticated && !isAdmin"><a routerLink="/cart">Cart</a></li>
                 <li *ngIf="isAuthenticated" (click)="onLogout()"><a>Logout</a></li>
+                <li routerLinkActive="active" *ngIf="isAuthenticated && !isAdmin"><a routerLink="/profile">Profile</a>
+                </li>
             </ul>
 
 
