--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                     <div>
                         <span class="mr-10">Rs. {{product.price}}</span>
 
-                        <span>
+                        <span class="ml-10">
                             <button class="btn btn-primary" (click)="decreaseQuantity(i)">-</button>
                             <span>{{productQuantity[i]}}</span>
                             <button class="btn btn-primary" (click)="increaseQuantity(i)">+</button>
