few changes made

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,8 +1,20 @@
+<div class="row">
+    <div class="text-center" *ngIf="isLoading">
+        <app-loading-spinner></app-loading-spinner>
+    </div>
+</div>
+
 <div class="container auth-container">
-    <div class="row">
+
+
+    <div class="row" *ngIf="!isLoading">
         <div class="col-md-6 col-md-offset-3">
+
             <div class="auth-box">
+
                 <h2 class="text-center">{{ inSignUpMode ? 'Sign Up' : 'Sign In' }}</h2>
+
+                <div class="alert alert-danger" *ngIf="error">{{error}}</div>
 
                 <form [formGroup]="authenticateForm" (ngSubmit)="onSubmit()">
                     <div class="form-group">
