--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,12 +2,24 @@
     margin-top: 5px;
 }
 
+.mt-4 {
+    margin-top: 15px;
+}
+
 .mr-4 {
     margin-right: 10px;
 }
 
 .mr-10 {
     margin-right: 25px;
+}
+
+.ml-1 {
+    margin-left: 4px;
+}
+
+.mr-1 {
+    margin-right: 4px;
 }
 
 .ml-10 {
