--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,6 +1,12 @@
 <div class="container">
 
     <div class="row">
+        <div class="text-center" *ngIf="isLoading">
+            <app-loading-spinner></app-loading-spinner>
+        </div>
+    </div>
+
+    <div class="row">
         <div *ngIf="filteredOrder.length === 0" class="text-center">
             <h3>You have no orders </h3>
         </div>
