--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,5 +1,11 @@
 <div class="container">
     <div class="row">
+        <div class="col-xs-12">
+            <h2 class="text-center mb-4">Products</h2>
+            <hr>
+        </div>
+    </div>
+    <div class="row">
         <div *ngFor="let product of products; let i=index" class="col-sm-6 col-md-4 ">
             <div class="panel panel-default">
                 <div class="panel-heading">
